# anicli

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yaml  release.yaml  tag.yaml
crates/anicli/: Cargo.toml
crates/anicli-allanime/: Cargo.toml
crates/anicli-allanime/src/: lib.rs  schedule.rs  source.rs
crates/anicli-anilist/: Cargo.toml
crates/anicli-anilist/src/: lib.rs
crates/anicli-aniskip/: Cargo.toml
crates/anicli-aniskip/src/: client.rs  iina.rs  lib.rs  mpv.rs
crates/anicli-core/: Cargo.toml
crates/anicli-core/src/: config.rs  episode.rs  history.rs  lib.rs  media.rs  quality.rs
crates/anicli-player/: Cargo.toml
crates/anicli-player/src/: lib.rs
crates/anicli-tui/: Cargo.toml
crates/anicli-tui/src/: lib.rs
crates/anicli/src/: main.rs
