[workspace]
members = [
    "crates/anicli",
    "crates/anicli-allanime",
    "crates/anicli-anilist",
    "crates/anicli-aniskip",
    "crates/anicli-core",
    "crates/anicli-player",
    "crates/anicli-tui",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Gridness/anicli-rs"
rust-version = "1.95.0"
version = "0.3.0"

[workspace.dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anicli-allanime = { path = "crates/anicli-allanime" }
anicli-anilist = { path = "crates/anicli-anilist" }
anicli-aniskip = { path = "crates/anicli-aniskip" }
anicli-core = { path = "crates/anicli-core" }
anicli-player = { path = "crates/anicli-player" }
anicli-tui = { path = "crates/anicli-tui" }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossterm = "0.28.1"
ctr = "0.9.2"
dirs = "6.0.0"
eyre = "0.6.12"
hex = "0.4.3"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.8.19"
urlencoding = "2.1.3"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
